# Linux_xiaozhi_ai

./: README.md
Audio_Processing/: CMakeLists.txt  sound.c  xiaozhi_opus.c
Control_Center/: CMakeLists.txt  control_center.c  websocket.c  websocket_test.c  xiaozhi_http.c
